@@ -1,4 +1,4 @@
-#line 1 "inc/Module/Install/Can.pm - C:/Perl/site/lib/Module/Install/Can.pm"
+#line 1 "inc/Module/Install/Can.pm - c:/Perl/site/lib/Module/Install/Can.pm"
 # $File: //depot/cpan/Module-Install/lib/Module/Install/Can.pm $ $Author: autrijus $
 # $Revision: #6 $ $Change: 1840 $ $DateTime: 2003/12/28 19:42:02 $ vim: expandtab shiftwidth=4
 
