@@ -1,4 +1,4 @@
-#line 1 "inc/Module/Install/Include.pm - C:/Perl/site/lib/Module/Install/Include.pm"
+#line 1 "inc/Module/Install/Include.pm - c:/Perl/site/lib/Module/Install/Include.pm"
 # $File: //depot/cpan/Module-Install/lib/Module/Install/Include.pm $ $Author: autrijus $
 # $Revision: #8 $ $Change: 1811 $ $DateTime: 2003/12/14 18:52:33 $ vim: expandtab shiftwidth=4
 
